--- a/PowerEmit/PowerEmit.csproj
+++ b/PowerEmit/PowerEmit.csproj
@@ -12,6 +12,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageProjectUrl>https://github.com/aka-nse/PowerEmit</PackageProjectUrl>
         <RepositoryUrl>https://github.com/aka-nse/PowerEmit</RepositoryUrl>
+        <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -42,6 +43,10 @@
         <None Update="Disassemblers\ILDisassembler.Entity.tt">
             <Generator>TextTemplatingFileGenerator</Generator>
             <LastGenOutput>ILDisassembler.Entity.g.cs</LastGenOutput>
+        </None>
+        <None Include="..\LICENSE.txt">
+          <Pack>True</Pack>
+          <PackagePath></PackagePath>
         </None>
     </ItemGroup>
 
